fix: Sonar code quality issues